Fix T67459: Dope Editor, muting channels with shortcut doesn't work